; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_stream.c_streamDeleteItem.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_stream.c_streamDeleteItem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @streamDeleteItem(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %5, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @streamIteratorStart(i32* %6, i32* %9, i32* %10, i32* %11, i32 0)
  %13 = call i64 @streamIteratorGetID(i32* %6, i32* %7, i32* %8)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = call i32 @streamIteratorRemoveEntry(i32* %6, i32* %7)
  store i32 1, i32* %5, align 4
  br label %17

17:                                               ; preds = %15, %2
  %18 = call i32 @streamIteratorStop(i32* %6)
  %19 = load i32, i32* %5, align 4
  ret i32 %19
}

declare dso_local i32 @streamIteratorStart(i32*, i32*, i32*, i32*, i32) #1

declare dso_local i64 @streamIteratorGetID(i32*, i32*, i32*) #1

declare dso_local i32 @streamIteratorRemoveEntry(i32*, i32*) #1

declare dso_local i32 @streamIteratorStop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
